--- a/index.html
+++ b/index.html
@@ -4,124 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Registration</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
 
-        form {
-            margin-bottom: 20px;
-        }
 
-        label {
-            display: block;
-            margin-top: 10px;
-        }
+<link rel="stylesheet" href="styles.css">
 
-        input, select {
-            width: 100%;
-            padding: 8px;
-            margin-top: 5px;
-            box-sizing: border-box;
-        }
 
-        button {
-            margin-top: 10px;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
-
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            display: none;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .overlay-content {
-            background: white;
-            padding: 20px;
-            border-radius: 5px;
-            width: 80%;
-            max-width: 600px;
-        }
-
-        .overlay-content h2 {
-            margin-top: 0;
-        }
-
-        .overlay-content ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .overlay-content li {
-            background: #f9f9f9;
-            margin: 5px 0;
-            padding: 10px;
-            border: 1px solid #ddd;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .overlay-content li span {
-            flex-grow: 1;
-            padding-right: 10px;
-        }
-
-        .close-button {
-            margin-top: 10px;
-            padding: 10px;
-            background-color: #ff4c4c;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-
-        .close-button:hover {
-            background-color: #ff1c1c;
-        }
-
-        .tag-button, .remove-button {
-            padding: 5px 10px;
-            margin-left: 5px;
-            border: none;
-            cursor: pointer;
-        }
-
-        .tag-button {
-            background-color: #007BFF;
-            color: white;
-        }
-
-        .tag-button:hover {
-            background-color: #0056b3;
-        }
-
-        .remove-button {
-            background-color: #ff4c4c;
-            color: white;
-        }
-
-        .remove-button:hover {
-            background-color: #ff1c1c;
-        }
-    </style>
-</head>
+    </head>
 <body>
     <h1>Student Registration Form</h1>
     <form id="registrationForm">
@@ -148,82 +36,8 @@
             <button class="close-button" id="closeOverlayButton">Close</button>
         </div>
     </div>
-
-    <script>
-        const adminPassword = '1234'; // Set your admin password here
-
-        let students = JSON.parse(localStorage.getItem('students')) || [];
-
-        function saveStudents() {
-            localStorage.setItem('students', JSON.stringify(students));
-        }
-
-        document.getElementById('registrationForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const name = document.getElementById('regName').value;
-            const email = document.getElementById('regEmail').value;
-            const phone = document.getElementById('regPhone').value;
-            const plan = document.getElementById('regPlan').value;
-
-            const student = {
-                name,
-                email,
-                phone,
-                plan,
-                tag: '',
-                contributions: [],
-                totalContribution: 0
-            };
-            students.push(student);
-            saveStudents();
-            document.getElementById('registrationForm').reset();
-        });
-
-        function displayRegisteredStudent(student, index) {
-            const registeredStudents = document.getElementById('registeredStudents');
-            const listItem = document.createElement('li');
-            listItem.innerHTML = `<span>Name: ${student.name}, Email: ${student.email}, Phone: ${student.phone} ${student.tag ? '(' + student.tag + ')' : ''}</span>
-                <button class="tag-button" onclick="tagStudent(${index}, 'older')">Tag Older</button>
-                <button class="tag-button" onclick="tagStudent(${index}, 'newer')">Tag Newer</button>
-                <button class="remove-button" onclick="removeStudent(${index})">Remove</button>`;
-            registeredStudents.appendChild(listItem);
-        }
-
-        function displayAllStudents() {
-            const registeredStudents = document.getElementById('registeredStudents');
-            registeredStudents.innerHTML = ''; // Clear previous entries
-            students.forEach(displayRegisteredStudent);
-        }
-
-        document.getElementById('viewStudentsButton').addEventListener('click', function() {
-            const password = prompt('Enter the admin password:');
-            if (password === adminPassword) {
-                displayAllStudents();
-                document.getElementById('studentsOverlay').style.display = 'flex';
-            } else {
-                alert('Incorrect password. Access denied.');
-            }
-        });
-
-        document.getElementById('closeOverlayButton').addEventListener('click', function() {
-            document.getElementById('studentsOverlay').style.display = 'none';
-        });
-
-        function tagStudent(index, tag) {
-            students[index].tag = tag;
-            saveStudents();
-            displayAllStudents();
-        }
-
-        function removeStudent(index) {
-            students.splice(index, 1);
-            saveStudents();
-            displayAllStudents();
-        }
-
-        // Display all students when the page loads
-        document.addEventListener('DOMContentLoaded', displayAllStudents);
-    </script>
-</body>
+<script src="script.js"</script>
+    </body>
 </html>
+
 
