--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <button class="close-button" id="closeOverlayButton">Close</button>
         </div>
     </div>
-<script src="script.js"</script>
+<script src="script.js"></script>
     </body>
 </html>
 
