--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
         <input type="tel" id="regPhone" name="regPhone" required><br>
         <label for="regPlan">Plan:</label>
         <select id="regPlan" name="regPlan">
-            <option value="Early Bird">Early Bird</option>
-            <option value="Regular">Regular</option>
-            <option value="VIP">Vip</option>
+            <option value="Early Bird">Early Bird - #5000</option>
+            <option value="Regular">Regular - #15000</option>
+            <option value="VIP">VIP - #50000</option>
         </select><br>
         <button type="submit">Register</button>
         <button type="button" id="viewStudentsButton">View Registered Students</button>
+        <button type="button" class="home-button" id="homeButton">Home</button>
     </form>
 
     <div id="studentsOverlay" class="overlay">
