--- a/index.html
+++ b/index.html
@@ -3,42 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Registration</title>
-
-
-<link rel="stylesheet" href="styles.css">
-
-
+    <title>Registration Button</title>
+    <link rel="stylesheet" href="styles.css">
     </head>
 <body>
-    <h1>Student Registration Form</h1>
-    <form id="registrationForm">
-        <label for="regName">Name:</label>
-        <input type="text" id="regName" name="regName" required><br>
-        <label for="regEmail">Email:</label>
-        <input type="email" id="regEmail" name="regEmail" required><br>
-        <label for="regPhone">Phone:</label>
-        <input type="tel" id="regPhone" name="regPhone" required><br>
-        <label for="regPlan">Plan:</label>
-        <select id="regPlan" name="regPlan">
-            <option value="Early Bird">Early Bird - #5000</option>
-            <option value="Regular">Regular - #15000</option>
-            <option value="VIP">VIP - #50000</option>
-        </select><br>
-        <button type="submit">Register</button>
-        <button type="button" id="viewStudentsButton">View Registered Students</button>
-        <button type="button" class="home-button" id="homeButton">Home</button>
-    </form>
-
-    <div id="studentsOverlay" class="overlay">
-        <div class="overlay-content">
-            <h2>Registered Students</h2>
-            <ul id="registeredStudents"></ul>
-            <button class="close-button" id="closeOverlayButton">Close</button>
-        </div>
-    </div>
-<script src="script.js"></script>
+    <button id="summitButton">Summit Button</button>
+    <script src="script.js"></script>
     </body>
 </html>
+
+
 
 
