--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     </head>
 <body>
-    <button id="summitButton">Summit Button</button>
+    <div><h2>Hurray!!!</h2></div>
+    <div><p>Thank you for taking this bold step, your life journey is about take to a different good turn </p></div>
+    <div><p>Click below to register.</p></div>
+    <button id="summitButton">Click to Register</button>
     <script src="script.js"></script>
     </body>
 </html>
