--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Button</title>
+    <title>Registration</title>
     <link rel="stylesheet" href="styles.css">
     </head>
 <body>
-    <div><h2>Hurray!!!</h2></div>
-    <div><p>Thank you for taking this bold step, your life journey is about take to a different good turn </p></div>
-    <div><p>Click below to register.</p></div>
-    <button id="summitButton">Click to Register</button>
-    <script src="script.js"></script>
+
+<div><h3>Welcome!!!</h3></div>
+    <p>Thank you for taking this bold step, your life journey is about take to a different good turn</p>
+    <div><p>Click below to get registered:</p></div>
+    <button id="summitButton">Contests Registration</button>
+    <button type="button" class="home-button" id="homeButton">Home</button>
+    
+    <div id="emailForm" class="hidden">
+        <p>Hello,<br><br>Please follow the instructions closely?<br><br>Full Name:<br><br>Email:<br><br>Phone No:<br><br>address:<br><br>aaartswithartsbasy<br><br>Opay7035252721<br><br>Upload your payment slips through the file attachment<br><br></p>
+        <textarea id="userMessage" placeholder="Type accurately your details here..."></textarea>
+        <button id="sendEmailButton">Submit</button>
+    </div>
+<script src="script.js"></script>
     </body>
 </html>
 
